# tender

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
src/: error.rs  event.rs  lib.rs  member.rs  metrics.rs  msg.rs  options.rs  rpc.rs  storage.rs  task.rs  util.rs  wait_group.rs
src/core/: candidate.rs  follower.rs  leader.rs  mod.rs  observer.rs  startup.rs
tests/: fixtures.rs  group_election.rs  single_node.rs
