[package]
name = "tender"
version = "0.1.0"
authors = ["David Li <davidli2010@foxmail.com>"]
edition = "2021"
readme = "README.md"
license = "MIT OR Apache-2.0"
description = "A Raft-based election framework"
keywords = ["raft", "election"]
repository = "https://github.com/cod-technologies/tender.git"
homepage = "https://github.com/cod-technologies/tender"
documentation = "https://docs.rs/tender/"

[dependencies]
log = "0.4.14"
fastrand = "1.7.0"
crossbeam-channel = "0.5.2"
watch = { version = "0.2.1", features = ["parking_lot"] }
parking_lot = "0.12.0"

[dev-dependencies]
env_logger = "0.9.0"
