[package]
name = "tender"
version = "0.1.1"
authors = ["David Li <davidli2010@foxmail.com>"]
edition = "2021"
rust-version = "1.57"
readme = "README.md"
license = "MIT OR Apache-2.0"
description = "A Raft-based election framework"
keywords = ["raft", "election"]
repository = "https://github.com/cod-technologies/tender.git"
homepage = "https://github.com/cod-technologies/tender"
documentation = "https://docs.rs/tender/"

[dependencies]
log = "0.4.17"
fastrand = "1.8.0"
crossbeam-channel = "0.5.6"
watch = { version = "0.2.2", features = ["parking_lot"] }
sync-wait-group = "0.1.1"
fxhash = "0.2.1"

[dev-dependencies]
env_logger = "0.9.0"
parking_lot = "0.12.1"
